--- a/src/app/admin/admin-course/admin-course.component.html
+++ b/src/app/admin/admin-course/admin-course.component.html
@@ -76,4 +76,9 @@
       </tr>
     </tbody>
   </table>
+   <!-- Footer Section -->
+   <div class="footer">
+    <p>&copy; 2025 TimeMaster. All rights reserved.</p>
+  </div>
+
 </div>
