--- a/src/app/admin/admin-teachers/admin-teachers.component.html
+++ b/src/app/admin/admin-teachers/admin-teachers.component.html
@@ -111,7 +111,7 @@
             <img
               src="assets/icons/Button_Edit.png"
               alt="Edit"
-              width="30"
+              width="80"
               height="30"
             />
           </button>
@@ -125,7 +125,7 @@
             <img
               src="assets/icons/Button_Del.png"
               alt="Delete"
-              width="30"
+              width="80"
               height="30"
             />
           </button>
@@ -133,4 +133,9 @@
       </tr>
     </tbody>
   </table>
+   <!-- Footer Section -->
+   <div class="footer">
+    <p>&copy; 2025 TimeMaster. All rights reserved.</p>
+  </div>
+
 </div> 
