--- a/src/app/admin/admin-classrooms/admin-classrooms.component.html
+++ b/src/app/admin/admin-classrooms/admin-classrooms.component.html
@@ -75,4 +75,9 @@
             </tr>
         </tbody>
     </table>
+     <!-- Footer Section -->
+  <div class="footer">
+    <p>&copy; 2025 TimeMaster. All rights reserved.</p>
+  </div>
+
 </div>
