--- a/src/app/admin/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/admin/admin-sidebar/admin-sidebar.component.html
@@ -82,7 +82,7 @@
                 <p>Complaints</p>
             </a>
         </div>
-        <div class="menu-item logout">
+        <div class="menu-item logout" style="margin-top: -17px;">
             <a (click)="logout()">
                 <i class="fa-solid fa-sign-out-alt" style="color: #E74040; font-size: 18px;"></i>
                 <p class="logout-text" style="color: #E74040;">Sign Out</p>
